fixed overflow

--- a/src/screen5/screen5.css
+++ b/src/screen5/screen5.css
@@ -6,6 +6,7 @@
     display: grid;
     justify-items: center;
     grid-template-rows: 1fr 1fr 1fr;
+    overflow: auto;
 }
 
 .meeting-grid{
